--- a/hellodocker/pom.xml
+++ b/hellodocker/pom.xml
@@ -105,4 +105,55 @@
       </plugin>
     </plugins>
   </build>
+  <profiles>
+    <profile>
+      <id>docker</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>io.fabric8</groupId>
+            <artifactId>docker-maven-plugin</artifactId>
+            <version>0.36.1</version>
+            <configuration>
+              <showLogs>true</showLogs>
+              <verbose>build</verbose>
+              <images>
+                <image>
+                  <name>java-hello-world</name>
+                  <build>
+                    <contextDir>${project.basedir}</contextDir>
+                    <args>
+                    <jarToCopy>${project.artifactId}-${project.version}.jar</jarToCopy>
+                    </args>
+                  </build>
+                  <run>
+                    <wait>
+                      <log>Hello World!</log>
+                      <time>1000</time>
+                    </wait>
+                  </run>
+                </image>
+              </images>
+            </configuration>
+            <executions>
+              <execution>
+                <id>docker-build-image</id>
+                <phase>package</phase>
+                <goals>
+                  <goal>build</goal>
+                </goals>
+              </execution>
+              <execution>
+                <id>docker-verify</id>
+                <goals>
+                  <goal>start</goal>
+                  <goal>stop</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
